# clang-scala.g8

./: .gitignore  LICENSE.txt  README.md  build.sbt
.github/workflows/: test.yml
doc/: IDE.md
src/main/g8/: .gitignore  build.sbt  cmake.sbt  default.properties
src/main/g8/src/: CMakeLists.txt  dependencies.cmake  shims.cmake
src/main/g8/src/main/: CMakeLists.txt
src/main/g8/src/main/cpp/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.i
src/main/g8/src/main/include/example/: HelloWorld.h
src/main/g8/src/main/scala/$package;format="package-dir"$/: JNILoader.scala
src/main/g8/src/test/cpp/: CMakeLists.txt  HelloWorldTest.cpp
src/main/g8/src/test/scala/$package;format="package-dir"$/: HelloWorldSpec.scala
